--- a/notebook/explorer.ipynb
+++ b/notebook/explorer.ipynb
@@ -3663,18 +3663,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many ways to deploy!\n",
+    "Many ways to deploy: [Azure Tools VS Code extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode.vscode-node-azure-pack), [Azure CLI](https://learn.microsoft.com/en-us/cli/azure/?WT.mc_id=python-79071-pamelafox), [Azure Dev CLI](https://learn.microsoft.com/en-us/azure/developer/azure-developer-cli/overview?WT.mc_id=python-79071-pamelafox) (In public preview).\n",
     "\n",
-    "* Azure Tools VS Code extension\n",
-    "* Azure CLI\n",
-    "* Azure Dev CLI (Public preview)\n",
-    "\n",
-    "The last one is my favorite:\n",
+    "Using the Azure Dev CLI:\n",
     "\n",
     "```shell\n",
-    "% azd up\n",
+    "%% azd up\n",
     "\n",
-    "Infrastructure provisioning plan completed successfully\n",
     "Provisioning Azure resources can take some time.\n",
     "\n",
     "You can view detailed progress in the Azure Portal:\n",
@@ -3688,6 +3683,12 @@
     "Created Web App: salary-model-v5dvp62jp2mjg-function-app\n",
     "\n",
     "Azure resource provisioning completed successfully\n",
+    "\n",
+    "Deployed service api\n",
+    " - Endpoint: https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/\n",
+    "\n",
+    "View the resources created under the resource group salary-model-rg in Azure Portal:\n",
+    "https://portal.azure.com/#@/resource/subscriptions/32ea8a26-5b40-4838-b6cb-be5c89a57c16/resourceGroups/salary-model-rg/overview\n",
     "```\n"
    ]
   },
