--- a/notebook/explorer.ipynb
+++ b/notebook/explorer.ipynb
@@ -3637,7 +3637,7 @@
     "\n",
     "@app.get(\"/model_predict\")\n",
     "async def predict(years_coding: int, years_coding_pro: int, ed_level: str, dev_status: str, country: str):\n",
-    "    X_new = numpy.array([[years_code, years_code_pro, ed_level, dev_status, country]])\n",
+    "    X_new = numpy.array([[years_coding, years_coding_pro, ed_level, dev_status, country]])\n",
     "    result = model.predict(X_new)\n",
     "    return {\"salary\": round(result[0], 2)}\n",
     "\n",
@@ -3690,6 +3690,69 @@
     "View the resources created under the resource group salary-model-rg in Azure Portal:\n",
     "https://portal.azure.com/#@/resource/subscriptions/32ea8a26-5b40-4838-b6cb-be5c89a57c16/resourceGroups/salary-model-rg/overview\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Calling the API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "Example API call:\n",
+    "    \n",
+    "[/model_predict?years_coding=25&years_coding_pro=15&ed_level=Master%E2%80%99s%20degree%20%28M.A.%2C%20M.S.%2C%20M.Eng.%2C%20MBA%2C%20etc.%29&dev_status=I%20am%20a%20developer%20by%20profession&\n",
+    "country=United%20States%20of%20America](https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/model_predict?years_coding=25&years_coding_pro=15&ed_level=Master%E2%80%99s%20degree%20%28M.A.%2C%20M.S.%2C%20M.Eng.%2C%20MBA%2C%20etc.%29&dev_status=I%20am%20a%20developer%20by%20profession&country=United%20States%20of%20America)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Results:\n",
+    "\n",
+    "```\n",
+    "{\"salary\":171993.74}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Auto-generated documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FastAPI auto-generates documentation based on the function signature.\n",
+    "    \n",
+    "* [/docs](https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/docs)\n",
+    "* [/redoc](https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/redoc)\n",
+    "\n",
+    "![Screenshot of auto-generated docs](autodocs.png)"
    ]
   },
   {
