More slide updates

--- a/notebook/explorer.ipynb
+++ b/notebook/explorer.ipynb
@@ -3668,8 +3668,19 @@
     "Using the Azure Dev CLI:\n",
     "\n",
     "```shell\n",
-    "%% azd up\n",
-    "\n",
+    "% azd up\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```shell\n",
     "Provisioning Azure resources can take some time.\n",
     "\n",
     "You can view detailed progress in the Azure Portal:\n",
@@ -3689,7 +3700,7 @@
     "\n",
     "View the resources created under the resource group salary-model-rg in Azure Portal:\n",
     "https://portal.azure.com/#@/resource/subscriptions/32ea8a26-5b40-4838-b6cb-be5c89a57c16/resourceGroups/salary-model-rg/overview\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -3851,7 +3862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -3875,15 +3886,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
+   "source": [
+    "## Re-deploying the function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the only change is code, I can just run:\n",
+    "    \n",
+    "```shell\n",
+    "% azd deploy\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```\n",
+    "Deploying service api...\n",
+    "Deployed service api\n",
+    " - Endpoint: https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Auto-generated documentation for category enums"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The categories are now dropdowns with all available options.\n",
+    "\n",
+    "![Screenshot of auto-generated docs](autodocs_withcats.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Next steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "* If you haven't yet, go through [the tutorial on regression models](https://learn.microsoft.com/en-us/training/modules/train-evaluate-regression-models/?WT.mc_id=python-79071-pamelafox)\n",
+    "* Check out [the code for this example](https://github.com/pamelafox/regression-model-azure-demo) and try deploying yourself \n",
+    "* Learn more about creating Azure functions in Python with the [Azure CLI](https://learn.microsoft.com/azure/azure-functions/create-first-function-cli-python?tabs=azure-cli%2Cbash&pivots=python-mode-configuration&WT.mc_id=python-79071-pamelafox) or [VS Code](https://learn.microsoft.com/en-us/azure/azure-functions/create-first-function-vs-code-python?pivots=python-mode-configuration&WT.mc_id=python-79071-pamelafox)\n",
+    "* Learn about more ways to [host Python on Azure](https://learn.microsoft.com/azure/developer/python/quickstarts-app-hosting?WT.mc_id=python-79071-pamelafox)\n",
+    "* Learn about the [Azure ML SDKs](https://learn.microsoft.com/python/api/overview/azure/ml/?view=azure-ml-py&WT.mc_id=python-79071-pamelafox)\n",
+    "* Attend the next talk in this series!\n"
+   ]
   }
  ],
  "metadata": {
