--- a/notebook/index.ipynb
+++ b/notebook/index.ipynb
@@ -17,10 +17,15 @@
    "source": [
     "👋🏻  I'm Pamela Fox (@pamelafox everywhere)\n",
     "\n",
+    "\n",
     "Today we will..\n",
     "\n",
     "* Build a regression model using Python and scikit-learn\n",
-    "* Deploy the model as an API using Python on Azure Functions\n"
+    "* Deploy the model as an API using Python on Azure Functions\n",
+    "\n",
+    "\n",
+    "\n",
+    "# [tinyurl.com/regression-slides](https://tinyurl.com/regression-slides)"
    ]
   },
   {
