--- a/notebook/index.ipynb
+++ b/notebook/index.ipynb
@@ -3741,22 +3741,22 @@
     "Provisioning Azure resources can take some time.\n",
     "\n",
     "You can view detailed progress in the Azure Portal:\n",
-    "https://portal.azure.com/#blade/HubsExtension/DeploymentDetailsBlade/overview/id/%2Fsubscriptions%2F32ea8a26-5b40-4838-b6cb-be5c89a57c16%2Fproviders%2FMicrosoft.Resources%2Fdeployments%2Fsalary-model\n",
+    "https://portal.azure.com/#blade/HubsExtension/DeploymentDetailsBlade/overview/id/%2Fsubscriptions%2F32ea8a26-5b40-4838-b6cb-be5c89a57c16%2Fproviders%2FMicrosoft.Resources%2Fdeployments%2Fsalary-model1\n",
     "\n",
-    "Created Resource group: salary-model-rg\n",
-    "Created Log Analytics workspace: salary-model-v5dvp62jp2mjg-logworkspace\n",
-    "Created Storage account: salarymodelv5dvp6storage\n",
-    "Created Application Insights: salary-model-v5dvp62jp2mjg-appinsights\n",
-    "Created App Service plan: salary-model-v5dvp62jp2mjg-plan\n",
-    "Created Web App: salary-model-v5dvp62jp2mjg-function-app\n",
+    "Created Resource group: salary-model1-rg\n",
+    "Created App Service plan: salary-model1-dtlpju3kmywzs-plan\n",
+    "Created Log Analytics workspace: salary-model1-dtlpju3kmywzs-logworkspace\n",
+    "Created Application Insights: salary-model1-dtlpju3kmywzs-appinsights\n",
+    "Created Storage account: salarymodel1dtlpjstorage\n",
+    "Created Web App: salary-model1-dtlpju3kmywzs-function-app\n",
     "\n",
     "Azure resource provisioning completed successfully\n",
     "\n",
     "Deployed service api\n",
-    " - Endpoint: https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/\n",
+    " - Endpoint: https://salary-model1-dtlpju3kmywzs-function-app.azurewebsites.net/\n",
     "\n",
-    "View the resources created under the resource group salary-model-rg in Azure Portal:\n",
-    "https://portal.azure.com/#@/resource/subscriptions/32ea8a26-5b40-4838-b6cb-be5c89a57c16/resourceGroups/salary-model-rg/overview\n",
+    "View the resources created under the resource group salary-model1-rg in Azure Portal:\n",
+    "https://portal.azure.com/#@/resource/subscriptions/32ea8a26-5b40-4838-b6cb-be5c89a57c16/resourceGroups/salary-model1-rg/overview\n",
     "```"
    ]
   },
@@ -3782,7 +3782,7 @@
     "Example API call:\n",
     "    \n",
     "[/model_predict?years_coding=25&years_coding_pro=15&ed_level=Master%E2%80%99s%20degree%20%28M.A.%2C%20M.S.%2C%20M.Eng.%2C%20MBA%2C%20etc.%29&dev_status=I%20am%20a%20developer%20by%20profession&\n",
-    "country=United%20States%20of%20America](https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/model_predict?years_coding=25&years_coding_pro=15&ed_level=Master%E2%80%99s%20degree%20%28M.A.%2C%20M.S.%2C%20M.Eng.%2C%20MBA%2C%20etc.%29&dev_status=I%20am%20a%20developer%20by%20profession&country=United%20States%20of%20America)\n"
+    "country=United%20States%20of%20America](https://salary-model1-dtlpju3kmywzs-function-app.azurewebsites.net/model_predict?years_coding=25&years_coding_pro=15&ed_level=Master%E2%80%99s%20degree%20%28M.A.%2C%20M.S.%2C%20M.Eng.%2C%20MBA%2C%20etc.%29&dev_status=I%20am%20a%20developer%20by%20profession&country=United%20States%20of%20America)\n"
    ]
   },
   {
@@ -3817,8 +3817,8 @@
    "source": [
     "FastAPI auto-generates documentation based on the function signature.\n",
     "    \n",
-    "* [/docs](https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/docs)\n",
-    "* [/redoc](https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/redoc)\n",
+    "* [/docs](https://salary-model1-dtlpju3kmywzs-function-app.azurewebsites.net/docs)\n",
+    "* [/redoc](https://salary-model1-dtlpju3kmywzs-function-app.azurewebsites.net/redoc)\n",
     "\n",
     "![Screenshot of auto-generated docs](autodocs.png)"
    ]
@@ -3975,7 +3975,7 @@
     "```\n",
     "Deploying service api...\n",
     "Deployed service api\n",
-    " - Endpoint: https://salary-model-v5dvp62jp2mjg-function-app.azurewebsites.net/\n",
+    " - Endpoint: https://salary-model1-dtlpju3kmywzs-function-app.azurewebsites.net/\n",
     "```"
    ]
   },
@@ -3994,7 +3994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The categories are now dropdowns with all available options.\n",
+    "The categories in the [docs](https://salary-model2-sibqf23ha7ib2-function-app.azurewebsites.net/docs) are now dropdowns with all available options.\n",
     "\n",
     "![Screenshot of auto-generated docs](autodocs_withcats.png)"
    ]
